# pico-dual-core

./: CMakeLists.txt  README.md  multi.c  multi.lst
